Changed to use grid, resolved misalignment of buttons with grid and corrected issue of determining winning grid.

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,20 @@
+nav {
+    display:grid;
+    grid-template-columns: auto 100px 100px 100px auto;
+    grid-template-rows: auto;
+}
+
+nav ul {
+    grid-column: 3/ span 1;
+    margin: 0;
+    padding: 0;
+    margin-top: 1em;
+}
+
 nav li {
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 nav li button {
@@ -20,8 +35,11 @@ body {
 }
 
 .container {
-    display: block;
+    display: grid;
     text-align: center;
+    place-content: center;
+    grid-template-columns: auto 100px 100px 100px auto;
+    grid-template-rows: auto 100px 100px 100px auto;
 }
 
 table {
@@ -36,60 +54,78 @@ td {
 }
 
 .container button {
-    border: 0;
     width: 100%;
     height: 100%;
     background-color: white;
     padding: 0;
     margin: 0;
-
 }
 
-table .cell {
+.cell {
     font-size: 5rem;
+    display: grid;
+    border:0;
 }
 
 .cell0 {
     border-bottom: solid black 2px;
     border-right: solid black 2px;
+    grid-column: 2/ span 1;
+    grid-row: 2/ span 1;
 }
 .cell1 {
     border-bottom: solid black 2px;
     border-left: solid black 2px;
     border-right: solid black 2px;
+    grid-column: 3/ span 1;
+    grid-row: 2/ span 1;
 }
 .cell2 {
     border-bottom: solid black 2px;
     border-left: solid black 2px;
+    grid-column: 4/ span 1;
+    grid-row: 2/ span 1;
 }
 .cell3 {
     border-bottom: solid black 2px;
     border-top: solid black 2px;
     border-right: solid black 2px;
+    grid-column: 2/ span 1;
+    grid-row: 3/ span 1;
 }
 .cell4 {
     border-bottom: solid black 2px;
     border-top: solid black 2px;
     border-left: solid black 2px;
     border-right: solid black 2px;
+    grid-column: 3/ span 1;
+    grid-row: 3/ span 1;
 }
 .cell5 {
     border-bottom: solid black 2px;
     border-top: solid black 2px;
     border-left: solid black 2px;
+    grid-column: 4/ span 1;
+    grid-row: 3/ span 1;
 }
 .cell6 {
     border-top: solid black 2px;
     border-right: solid black 2px;
+    grid-column: 2/ span 1;
+    grid-row: 4/ span 1;
 }
 .cell7 {
     border-top: solid black 2px;
     border-left: solid black 2px;
     border-right: solid black 2px;
+    grid-column: 3/ span 1;
+    grid-row: 4/ span 1;
 }
 .cell8 {
     border-top: solid black 2px;
     border-left: solid black 2px;
+    grid-column: 4/ span 1;
+    grid-row: 4/ span 1;
 }
 #result {
     padding: 10px;
